--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'io.freefair.lombok' version '4.1.6'
+    id'io.qameta.allure'version'2.8.1'
 }
 
 group 'ru.netology'
@@ -11,7 +12,17 @@ sourceCompatibility = 11
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
+allure {
+    autoconfigure = true
+    version = '2.13.0'
+
+    useJUnit5 {
+        version = '2.13.0'
+    }
+}
+
 repositories {
+    jcenter()
     mavenCentral()
 }
 
@@ -19,9 +30,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.1'
     testImplementation 'mysql:mysql-connector-java:8.0.22'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'com.codeborne:selenide:5.11.0'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
-
-//    testImplementation 'io.rest-assured:rest-assured:4.3.0'
+    testImplementation 'io.rest-assured:rest-assured:4.3.0'
+    testImplementation'io.qameta.allure:allure-selenide:2.13.0'
 }
 
 test {
