--- a/docker-compose-ps.yml
+++ b/docker-compose-ps.yml
@@ -14,6 +14,6 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: password
-      POSTGRES_USER: admin
-      POSTGRES_DB: app
+      POSTGRES_PASSWORD=pass
+      POSTGRES_USER=app
+      POSTGRES_DB=app
