--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testImplementation 'com.codeborne:selenide:5.11.0'
     testImplementation 'mysql:mysql-connector-java:8.0.20'
-    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
-    testImplementation 'postgresql:postgresql:9.1-901-1.jdbc4'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.13'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
     testImplementation'io.qameta.allure:allure-selenide:2.13.0'
@@ -42,8 +41,8 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
-    systemProperty 'db.url', System.getProperty("db.url")
-    systemProperty 'db.user', System.getProperty("db.user", "app")
-    systemProperty 'db.password', System.getProperty("db.password", "pass")
-    systemProperty 'sut.url', System.getProperty("http://localhost:8080/")
+    systemProperty 'db.url', System.getProperty('db.url')
+    systemProperty 'login', System.getProperty('login', "app")
+    systemProperty 'password', System.getProperty('password', "pass")
+    systemProperty 'sut.url', System.getProperty('sut.url', "http://localhost:8080/")
 }
