--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
+    id'io.qameta.allure'version'2.8.0'
     id 'java'
     id 'io.freefair.lombok' version '4.1.6'
-    id'io.qameta.allure'version'2.8.1'
 }
 
 group 'ru.netology'
@@ -14,10 +14,10 @@ compileTestJava.options.encoding = "UTF-8"
 
 allure {
     autoconfigure = true
-    version = '2.13.0'
+    version = '2.8.0'
 
     useJUnit5 {
-        version = '2.13.0'
+        version = '2.8.0'
     }
 }
 
@@ -34,6 +34,7 @@ dependencies {
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.13'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
+    compile group: 'io.qameta.allure', name: 'allure-selenide', version: '2.8.0'
     testImplementation'io.qameta.allure:allure-selenide:2.13.0'
     testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.30'
 }
