--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id'io.qameta.allure'version'2.8.0'
+    id 'io.qameta.allure'version'2.8.0'
     id 'java'
     id 'io.freefair.lombok' version '4.1.6'
 }
@@ -31,6 +31,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     testImplementation 'com.codeborne:selenide:5.11.0'
     testImplementation 'mysql:mysql-connector-java:8.0.20'
+    testImplementation 'postgresql:postgresql:9.1-901-1.jdbc4'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.13'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
