--- a/docker-compose-ps.yml
+++ b/docker-compose-ps.yml
@@ -4,16 +4,16 @@ services:
     build: ./gate-simulator
     container_name: node
     ports:
-      - '9999:9999'
+    - '9999:9999'
+
   postgres:
     image: postgres
     container_name: postgres
-    restart: always
-    volumes:
-      - ./postgres-data:/var/lib/postgresql/data
     ports:
       - 5432:5432
+    volumes:
+      - ./postgres-data:/var/lib/postgresql
     environment:
-      POSTGRES_PASSWORD=pass
-      POSTGRES_USER=app
-      POSTGRES_DB=app
+      - POSTGRES_PASSWORD=pass
+      - POSTGRES_USER=app
+      - POSTGRES_DB=app
